--- a/css/theme1.css
+++ b/css/theme1.css
@@ -326,7 +326,7 @@
 -------------- */
     
     #facts {
-	    background: #27ad60 url("../img/pattern_theme_2.svg") repeat;
+	    background: #2c3e50 url("../img/pattern_theme_1.svg") repeat;
 	    padding: 120px 0px ;
 	    display: block;
         width: 100%;
