--- a/css/custom.css
+++ b/css/custom.css
@@ -58,6 +58,32 @@
     /* 2. NAVBAR
     -------------------------------------------------- */
 
+    .navbar {
+        min-height: 80px;    
+    }
+
+    .navbar-nav {
+        float: right;
+    }
+    
+    .navbar-nav > li > a {
+        line-height: 60px;
+    }
+
+    .navbar-inverse .navbar-nav > li > a {
+        color: #fff;
+    }
+    .navbar-inverse .navbar-nav > li > a:hover,
+    .navbar-inverse .navbar-nav > li > a:focus {
+        color: #cccccc;
+        background-color: transparent;
+    }
+
+    .navbar-toggle {
+        margin-top: 23px;
+        margin-bottom: 23px;
+    }
+
     #menu {
 	    z-index: 11000;
     }
