contact us: background updated

--- a/css/theme1.css
+++ b/css/theme1.css
@@ -364,7 +364,7 @@
 -------------- */
    
     #contact {
-	    background: #2c3e50;
+	    background: #27ad60;
 	    padding: 120px 0px ;
 	    display: block;
         width: 100%;
@@ -415,7 +415,7 @@
     /* GOING UP ARROW */
     
     .up {
-	    background: #2c3e50;
+	    background: #27ad60;
     }
     
     .up span:hover {
