--- a/css/custom.css
+++ b/css/custom.css
@@ -90,10 +90,15 @@
 
     /* 3. SLIDER BACKGROUND
     -------------------------------------------------- */
+
+    .logo {
+        margin: 0 auto;
+        margin-top: 100px;
+    }
     
     #top-slider {
     	width: 100%;
-    	height: 600px;
+    	height: 710px;
      	text-align: center;
     	z-index: 100;
     }
@@ -1028,6 +1033,8 @@
     .slider-image {
         padding-top: 10px;
         margin: 0 auto;
+        max-width: 200px;
+        max-height: 200px;
     }
     
     /* About Us */
@@ -1069,10 +1076,6 @@
 	    padding-top: 10px;
     }
 
-    .slider-image {
-        padding-top: 10px;
-        margin: 0 auto;
-    }
     
     /* Navbar */
     
@@ -1137,7 +1140,7 @@
     
     #top-slider {
     	width: 100%;
-    	height: 500px;
+    	height: 600px;
      	text-align: center;
     	z-index: 100;
     }
@@ -1317,7 +1320,7 @@
 
     #top-slider {
     	width: 100%;
-    	height: 350px;
+    	height: 500px;
      	text-align: center;
     	z-index: 100;
     }
