navbar links updated

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4127,7 +4127,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 .navbar-inverse .navbar-collapse,
 .navbar-inverse .navbar-form {
-  border-color: #1f2a41;
+  border-color: #7c7c7c;
 }
 .navbar-inverse .navbar-nav > .open > a,
 .navbar-inverse .navbar-nav > .open > a:hover,
