--- a/css/custom.css
+++ b/css/custom.css
@@ -71,6 +71,7 @@
     }
 
     .navbar-inverse .navbar-nav > li > a {
+        font-size: 18px;
         color: #fff;
     }
     .navbar-inverse .navbar-nav > li > a:hover,
