top section css updated

--- a/css/theme1.css
+++ b/css/theme1.css
@@ -26,6 +26,12 @@
   box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.9);
 }
 
+/* 1.1 Top-section
+-------------------*/
+#top-section {
+    background-color: #2c3e50;
+}
+
 /* 2. About Us
 -------------- */
 
