--- a/css/custom.css
+++ b/css/custom.css
@@ -55,6 +55,22 @@
 		text-align: center;
 	}
 
+    .roro-header {
+        font-size: 60px;
+	    text-align: center;
+		color: #fff;
+        margin-top: 60px;
+        font-family:monospace; 
+	}
+
+    .roro-tagline {
+        font-size: 30px;
+	    text-align: center;
+		color: #fff;
+        margin-top: 30px;
+        font-family:monospace; 
+    }
+
     /* 2. NAVBAR
     -------------------------------------------------- */
 
@@ -97,22 +113,13 @@
         margin-top: 100px;
     }
     
-    #top-slider {
+    #top-section {
     	width: 100%;
     	height: 710px;
      	text-align: center;
     	z-index: 100;
     }
 
-    #top-slider .slider-bg {
-    	background: url(../img/carousel-bg.jpg) 0 0 repeat fixed;	
-    	margin: 0 auto;
-    	padding: 0;
-    	position: absolute;
-    	z-index: 100;
-    	width: 100%;
-    	height: 800px;
-    }
 
     /* 4. ABOUT US
     -------------------------------------------------- */
@@ -1023,10 +1030,6 @@
     
     /* Top Slider */
     
-     #top-slider .slider-bg {
-        background-size: cover;
-    }
-    
     .slider-caption {
 	    padding-top: 10px;
     }
@@ -1139,22 +1142,13 @@
     
     /* Top Slider */
     
-    #top-slider {
+    #top-section {
     	width: 100%;
     	height: 600px;
      	text-align: center;
     	z-index: 100;
     }
 
-    #top-slider .slider-bg {
-   	 	margin: 0 auto;
-		padding: 0;
-		position: absolute;
-		z-index: 100;
-		width: 100%;
-		height: 600px;
-    }
-    
     .slide {
 	    padding-top: 30%;
     }
@@ -1319,20 +1313,11 @@
     
     /* Top Slider */
 
-    #top-slider {
+    #top-section {
     	width: 100%;
     	height: 500px;
      	text-align: center;
     	z-index: 100;
-    }
-    
-    #top-slider .slider-bg {
-   	 	margin: 0 auto;
-		padding: 0;
-		position: absolute;
-		z-index: 100;
-		width: 100%;
-		height: 400px;
     }
     
     /* Button */
