Top-section: Parallex effect restored

--- a/css/theme1.css
+++ b/css/theme1.css
@@ -26,9 +26,9 @@
   box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.9);
 }
 
-/* 1.1 Top-section
+/* 1.1 Top-slider
 -------------------*/
-#top-section {
+#top-slider {
     background-color: #2c3e50;
 }
 
