--- a/css/custom.css
+++ b/css/custom.css
@@ -113,7 +113,7 @@
         margin-top: 100px;
     }
     
-    #top-section {
+    #top-slider {
     	width: 100%;
     	height: 710px;
      	text-align: center;
@@ -1142,7 +1142,7 @@
     
     /* Top Slider */
     
-    #top-section {
+    #top-slider {
     	width: 100%;
     	height: 600px;
      	text-align: center;
@@ -1313,7 +1313,7 @@
     
     /* Top Slider */
 
-    #top-section {
+    #top-slider {
     	width: 100%;
     	height: 500px;
      	text-align: center;
