--- a/css/theme1.css
+++ b/css/theme1.css
@@ -87,7 +87,7 @@
 	}
 	
 	.service-col:hover h4 {
-	    color: #e67e22 !important;
+	    color: #27ad60 !important;
 	    border-bottom: 1px solid #fff;
     }
     
@@ -100,14 +100,14 @@
     }
     
     .service-col:hover > div {
-        background: #e67e22;
+        background: #27ad60;
         color: #fff;
     }
     
     .icon-wrench, .icon-mobile, .icon-desktop {
 	    background-color: #2c3e50;
         color: #e67e22;
-    }
+    }   
 
 /* 4. Portfolio
 -------------- */
