--- a/css/custom.css
+++ b/css/custom.css
@@ -84,6 +84,8 @@
     
     .navbar-nav > li > a {
         line-height: 60px;
+        padding-left: 30px;
+        padding-right: 0px;
     }
 
     .navbar-inverse .navbar-nav > li > a {
@@ -901,6 +903,7 @@
     
     .bottom-con {
 	    padding-bottom: 10px;
+        float: right;
     }
     
     .bottom-con h5 {
