--- a/css/custom.css
+++ b/css/custom.css
@@ -55,21 +55,6 @@
 		text-align: center;
 	}
 
-    .roro-header {
-        font-size: 60px;
-	    text-align: center;
-		color: #fff;
-        margin-top: 60px;
-        font-family:monospace; 
-	}
-
-    .roro-tagline {
-        font-size: 30px;
-	    text-align: center;
-		color: #fff;
-        margin-top: 30px;
-        font-family:monospace; 
-    }
 
     /* 2. NAVBAR
     -------------------------------------------------- */
@@ -89,6 +74,7 @@
         letter-spacing: 15px;
         text-align: center;
         color: white;
+        padding-top: 5px;
     }
     
     .navbar-nav {
@@ -127,19 +113,29 @@
 	    z-index: 11000;
     }
 
-    /* 3. SLIDER BACKGROUND
+    /* 3. top-section BACKGROUND
     -------------------------------------------------- */
 
-    .logo {
-        margin: 0 auto;
-        margin-top: 100px;
-    }
-    
     #top-slider {
     	width: 100%;
     	height: 710px;
      	text-align: center;
     	z-index: 100;
+    }
+    
+    .logo {
+        margin: 0 auto;
+        margin-top: 170px;
+    }
+    
+    .roro-tagline {
+        font-size: 18px;
+	    text-align: center;
+		color: #fff;
+        margin-top: 80px;
+        font-family:monospace; 
+        padding-left: 20%;
+        padding-right: 20%;
     }
 
 
@@ -1221,6 +1217,15 @@
      	text-align: center;
     	z-index: 100;
     }
+        
+    .logo {
+        margin: 0 auto;
+        margin-top: 130px;
+    }
+    
+    .roro-tagline {
+        margin-top: 50px;
+    }
 
     .slide {
 	    padding-top: 30%;
@@ -1388,9 +1393,18 @@
 
     #top-slider {
     	width: 100%;
-    	height: 500px;
+    	height: 600px;
      	text-align: center;
     	z-index: 100;
+    }
+        
+    .logo {
+        margin: 0 auto;
+        margin-top: 130px;
+    }
+    
+    .roro-tagline {
+        margin-top: 50px;
     }
     
     /* Button */
