--- a/css/theme1.css
+++ b/css/theme1.css
@@ -2,8 +2,8 @@
     -------------------------------------------------- 
 
     1. NAVBAR
-    2. ABOUT US
-    3. SERVICE
+    2. SERVICE
+    3. ABOUT US
     4. PORTFOLIO
     5. TEAM
     6. PRICE TABLES
@@ -32,12 +32,65 @@
     background-color: #2c3e50;
 }
 
-/* 2. About Us
+/* 2. Service
+-------------- */
+    
+    #service {
+	    background: #27ad60;
+	    padding: 70px 0px;
+	    display: block;
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+	    z-index: 900;
+	    text-align: center;
+    }
+    
+    #service h1 {
+	    color: #fff;
+    }
+    
+    .service-col:hover {
+	    background: #2c3e50;
+	    color: #fff;
+    }
+    
+    .service-col h4 {
+	    color: #fff;
+	}
+	
+	.service-col:hover h4 {
+	    color: #27ad60 !important;
+	    border-bottom: 1px solid #fff;
+    }
+    
+    .service-col p {
+	    color: #ffffff;
+        opacity: 60%;
+        font-size: 14px;
+        font-family: monospace;
+    }
+    
+     .service-col:hover p {
+	    color: #fff;
+    }
+    
+    .service-col:hover > div {
+        background: #27ad60;
+        color: #fff;
+    }
+    
+    .icon-wrench, .icon-mobile, .icon-desktop {
+	    background-color: #2c3e50;
+        color: #e67e22;
+    }   
+
+/* 3. About Us
 -------------- */
 
     #about {
 	    background: #2c3e50;
-	    padding: 120px 0px ;
+	    padding: 70px 0px ;
 	    display: block;
         width: 100%;
         overflow: hidden;
@@ -59,62 +112,12 @@
 	    color: #fff !important;
     }
 
-/* 3. Service
--------------- */
-    
-    #service {
-	    background: #27ad60;
-	    padding: 120px 0px;
-	    display: block;
-        width: 100%;
-        overflow: hidden;
-        position: relative;
-	    z-index: 900;
-	    text-align: center;
-    }
-    
-     #service h1 {
-	    color: #fff;
-    }
-    
-    .service-col:hover {
-	    background: #2c3e50;
-	    color: #fff;
-    }
-    
-    .service-col h4 {
-	    color: #fff;
-	}
-	
-	.service-col:hover h4 {
-	    color: #27ad60 !important;
-	    border-bottom: 1px solid #fff;
-    }
-    
-    .service-col p {
-	    color: #c1c1c1;
-    }
-    
-     .service-col:hover p {
-	    color: #fff;
-    }
-    
-    .service-col:hover > div {
-        background: #27ad60;
-        color: #fff;
-    }
-    
-    .icon-wrench, .icon-mobile, .icon-desktop {
-	    background-color: #2c3e50;
-        color: #e67e22;
-    }   
-
 /* 4. Portfolio
 -------------- */
     
     #portfolio {
 	    background: #2c3e50;
-	    padding: 120px 0px ;
+	    padding: 70px 0px ;
 	    display: block;
         width: 100%;
         overflow: hidden;
@@ -141,7 +144,7 @@
     
     #team {
 	    background: #27ad60;
-	    padding: 120px 0px ;
+	    padding: 70px 0px ;
 	    display: block;
         width: 100%;
         overflow: hidden;
@@ -217,7 +220,7 @@
     
     #price {
 	    background: #2c3e50;
-	    padding: 120px 0px ;
+	    padding: 70px 0px ;
 	    display: block;
         width: 100%;
         overflow: hidden;
@@ -258,7 +261,7 @@
     
     #process {
 	    background: #27ad60;
-	    padding: 120px 0px ;
+	    padding: 70px 0px ;
 	    display: block;
         width: 100%;
         overflow: hidden;
@@ -271,7 +274,7 @@
     }
     
     .our-process { 
-        background: #27ad60 url(../img/process/our-process-theme2.svg) no-repeat center; 
+        background: #27ad60 url(../img/howWeDo/our-process-theme2.svg) no-repeat center; 
     }
     
     .process-con h5 {  
@@ -294,7 +297,7 @@
     
     #clients {
 	    background: #2c3e50;
-	    padding: 120px 0px ;
+	    padding: 70px 0px ;
 	    display: block;
         width: 100%;
         overflow: hidden;
@@ -333,7 +336,7 @@
     
     #facts {
 	    background: #2c3e50 url("../img/pattern_theme_1.svg") repeat;
-	    padding: 120px 0px ;
+	    padding: 70px 0px ;
 	    display: block;
         width: 100%;
         overflow: hidden;
@@ -371,7 +374,7 @@
    
     #contact {
 	    background: #27ad60;
-	    padding: 120px 0px ;
+	    padding: 70px 0px ;
 	    display: block;
         width: 100%;
         overflow: hidden;
@@ -453,7 +456,7 @@
     @media only screen and (max-width: 767px) {
 	    
 	.our-process { 
-       background: #27ad60 url(../img/process/our-process-theme2-mobil.svg) no-repeat center top; 
+       background: #27ad60 url(../img/howWeDo/our-process-theme2-mobil.svg) no-repeat center top; 
        min-height: 1200px;
        margin-bottom: 150px;
     }
