--- a/css/theme1.css
+++ b/css/theme1.css
@@ -375,7 +375,7 @@
    
     #contact {
 	    background: #27ad60;
-	    padding: 70px 0px ;
+	    padding: 70px 0px 110px 0px;
 	    display: block;
         width: 100%;
         overflow: hidden;
