goto top icon hover color updated

--- a/css/theme1.css
+++ b/css/theme1.css
@@ -429,11 +429,11 @@
     }
     
     .up span:hover {
-		color: #e67e22 ;
+		color: #cccccc ;
 	}
 	
 	.up span {
-	    color: #c1c1c1;
+	    color: #ffffff;
 	}
 	
 /* 11. Borders
