minor copy changes

--- a/css/theme1.css
+++ b/css/theme1.css
@@ -69,6 +69,7 @@
         opacity: 60%;
         font-size: 14px;
         font-family: monospace;
+        text-align: left;
     }
     
      .service-col:hover p {
