--- a/css/custom.css
+++ b/css/custom.css
@@ -761,6 +761,8 @@
         overflow: hidden; 
         width: 221px; 
         height: 221px;  
+        margin-left: 15px;
+        margin-right: 15px;
         border-radius: 50%;
         padding-top: 60px; 
     }
@@ -798,15 +800,15 @@
         height: 123px;
     }
     
-    .zoom-process {
-        
+    #zoom-process {
+
     }
     
-    .zoom-process:hover {
+    #zoom-process:hover {
         padding-top: 50px;
     }
     
-    .zoom-process:hover #zoom-image-process {
+    #zoom-process:hover #zoom-image-process {
         width: 123px;
         height: 123px;
     }
