contact us text updated

--- a/css/custom.css
+++ b/css/custom.css
@@ -912,7 +912,7 @@
     }
     
     .contact-us-text > a {
-        color: blue;
+        color: #2B3D4F;
         font-size: 25px;
         font-style: italic;
         text-decoration: underline;
