--- a/css/theme1.css
+++ b/css/theme1.css
@@ -375,8 +375,9 @@
 -------------- */
    
     #contact {
-	    background: #27ad60;
-	    padding: 70px 0px 110px 0px;
+        background: #2c3e50 url("../img/pattern_theme_1.svg") repeat;
+/*	    background: #27ad60;*/
+	    padding: 200px 0px 200px 0px;
 	    display: block;
         width: 100%;
         overflow: hidden;
@@ -426,7 +427,7 @@
     /* GOING UP ARROW */
     
     .up {
-	    background: #27ad60;
+	    background: #2B3D4F;
     }
     
     .up span:hover {
