color theam updated

--- a/css/custom.css
+++ b/css/custom.css
@@ -414,7 +414,7 @@
     .btn-hire:focus,
     .open .dropdown-toggle.btn-primary {
         color: #eeeeee;
-        background-color: #27ad60;
+        background-color: #03A9F4;
         border-color: #ffffff;
     }
 
