--- a/css/theme1.css
+++ b/css/theme1.css
@@ -75,7 +75,7 @@
     }
     
     .service-col:hover > div {
-        background: #03A9F4;
+        background: #27496C;
         color: #fff;
     }
     
