--- a/css/custom.css
+++ b/css/custom.css
@@ -405,13 +405,16 @@
         text-transform: uppercase;
         font-size: 20px;
 	    padding: 10px 20px;
+        color: #eeeeee;
+        background-color: #03A9F4;
+        border-color: #ffffff;
     }
 
     .btn-hire:hover,
     .btn-hire:focus,
     .open .dropdown-toggle.btn-primary {
-        color: #eeeeee;
-        background-color: #03A9F4;
+        color: #fff;
+        background-color: #27496C;
         border-color: #ffffff;
     }
 
