--- a/css/custom.css
+++ b/css/custom.css
@@ -24,6 +24,7 @@
 	    font-size: 50px;
 	    text-transform: uppercase;
 	    text-align: center;
+        padding-top: 70px;
     }
     
     h2 {
@@ -56,6 +57,9 @@
         font-family: monospace;
 	}
 
+    .contact-us-header-text {
+        padding-top: 100px;
+    }
 
     /* 2. NAVBAR
     -------------------------------------------------- */
@@ -108,12 +112,19 @@
 
     .navbar-inverse .navbar-nav > li > a {
         font-size: 18px;
-        font-family: monospace;
+        font-family: sans-serif;
         color: #eee;
     }
-    .navbar-inverse .navbar-nav > li > a:hover,
-    .navbar-inverse .navbar-nav > li > a:focus {
+    
+    .navbar-inverse .navbar-nav > li > a:hover {
         color: #fff;
+        background-color: transparent;
+    }
+
+    .navbar-inverse .navbar-nav > li > a:focus {
+        color: #FFDA44;
+        font-size: 18px;
+        font-family: sans-serif;
         background-color: transparent;
     }
 
