--- a/css/theme1.css
+++ b/css/theme1.css
@@ -383,11 +383,11 @@
     }
     
     .up span:hover {
-		color: #cccccc ;
+		color: #fff ;
 	}
 	
 	.up span {
-	    color: #ffffff;
+	    color: #ccc;
 	}
 	
 /* 11. Borders
