--- a/css/custom.css
+++ b/css/custom.css
@@ -65,7 +65,7 @@
     -------------------------------------------------- */
 
     .navbar {
-        min-height: 80px;    
+        min-height: 80px; 
     }
 
     .navbar-roro {
@@ -142,22 +142,22 @@
 
     #top-slider {
     	width: 100%;
-    	height: 800px;
+        height: 714px;
      	text-align: center;
     	z-index: 100;
         position: relative;
     }
 
     #top-slider .slider-bg {
-    	background: url(../img/top-section-bg-with-black-overlay.jpg) 0 0 no-repeat fixed;	
-    	margin: 0 auto;
-    	padding: 0;
-    	position: relative;
+        width: 100%;
+        height:714px; 
+    	background: url(../img/top_section_bg@2x.jpg) 0 0 no-repeat;	
+    	position: fixed;
     	z-index: 100;
-    	width: 100%;
-    	height: 800px;
+        top: 90px;
+        background-size: cover;
     }
-    
+
     .logo {
         margin: 0 auto;
         margin-top: 170px;
@@ -1049,15 +1049,16 @@
     	height: 600px;
      	text-align: center;
     	z-index: 100;
+        position: relative;
     }
         
     #top-slider .slider-bg {
-   	 	margin: 0 auto;
-		padding: 0;
-		position: absolute;
+		position: fixed;
 		z-index: 100;
 		width: 100%;
 		height: 600px;
+        top: 80px;
+        background-size: cover;
     }    
         
     .logo {
@@ -1238,15 +1239,15 @@
     	height: 600px;
      	text-align: center;
     	z-index: 100;
+        position: relative;
     }
         
     #top-slider .slider-bg {
-   	 	margin: 0 auto;
-		padding: 0;
-		position: absolute;
+        position: fixed;
 		z-index: 100;
 		width: 100%;
 		height: 600px;
+        top: 80px;
     }    
         
     .logo {
