--- a/css/custom.css
+++ b/css/custom.css
@@ -1055,6 +1055,7 @@
     #top-slider .slider-bg {
 		position: fixed;
 		z-index: 100;
+        background: url(../img/top_section_bg_767@2x.png) 0 0 no-repeat;
 		width: 100%;
 		height: 600px;
         top: 80px;
