--- a/css/theme1.css
+++ b/css/theme1.css
@@ -27,7 +27,7 @@
 /* 1.1 Top-slider
 -------------------*/
 #top-slider {
-    background-color: #27496C;
+    background-color: #3B7EB5;
 }
 
 /* 2. Service
