--- a/css/custom.css
+++ b/css/custom.css
@@ -151,12 +151,28 @@
     #top-slider .slider-bg {
         width: 100%;
         height:714px; 
-    	background: url(../img/top_section_bg@2x.jpg) 0 0 no-repeat;	
+        background-image:url(../img/top_section_bg.jpg);
+        background-repeat: no-repeat;
     	position: fixed;
     	z-index: 100;
         top: 90px;
         background-size: cover;
     }
+
+    /*CSS for serving the retina image to devices with a high "device-pixel-ratio":*/
+    @media	
+    only screen and (-webkit-min-device-pixel-ratio: 1.3),
+    only screen and (-o-min-device-pixel-ratio: 13/10),
+    only screen and (-moz-min-device-pixel-ratio: 1.5),
+    only screen and (min-resolution: 120dpi),
+    only screen and (min-resolution: 1.5dppx) {
+        
+        /* Top Slider */
+        #top-slider .slider-bg {
+            background-size: cover;
+            background-image: url(../img/top_section_bg@2x.jpg);
+        }
+	}
 
     .logo {
         margin: 0 auto;
@@ -1055,12 +1071,27 @@
     #top-slider .slider-bg {
 		position: fixed;
 		z-index: 100;
-        background: url(../img/top_section_bg_767@2x.png) 0 0 no-repeat;
+        background: url(../img/top_section_bg_767.jpg) 0 0 no-repeat;
 		width: 100%;
 		height: 600px;
         top: 80px;
         background-size: cover;
-    }    
+    }   
+        
+    /*CSS for serving the retina image to devices with a high "device-pixel-ratio":*/
+    @media	
+    only screen and (-webkit-min-device-pixel-ratio: 1.3),
+    only screen and (-o-min-device-pixel-ratio: 13/10),
+    only screen and (-moz-min-device-pixel-ratio: 1.5),
+    only screen and (min-resolution: 120dpi),
+    only screen and (min-resolution: 1.5dppx) {
+        
+        /* Top Slider */
+        #top-slider .slider-bg {
+            background-size: cover;
+            background-image: url(../img/top_section_bg_767@2x.jpg);
+        }
+	}    
         
     .logo {
         margin: 0 auto;
