--- a/css/custom.css
+++ b/css/custom.css
@@ -190,6 +190,19 @@
     }
 
 
+    .vertical-center {
+        padding-top: 200px;
+        padding-left: 200px
+    }
+
+
+    @media only screen and (max-width: 767px) {
+        .vertical-center {
+            padding-top: 150px;
+            padding-left: 100px;
+        }
+    }
+
     /* 4. ABOUT US
     -------------------------------------------------- */
     
