unused files removed

--- a/css/theme1.css
+++ b/css/theme1.css
@@ -275,7 +275,7 @@
 -------------- */
     
     #facts {
-	    background: #27496C url("../img/pattern_theme_1.svg") repeat;
+/*	    background: #27496C url("../img/pattern_theme_1.svg") repeat;*/
 	    padding-bottom: 70px;
 	    display: block;
         width: 100%;
