--- a/css/custom.css
+++ b/css/custom.css
@@ -190,14 +190,14 @@
     }
 
 
-    .vertical-center {
+    #vertical-center {
         padding-top: 200px;
         padding-left: 200px
     }
 
 
     @media only screen and (max-width: 767px) {
-        .vertical-center {
+        #vertical-center {
             padding-top: 150px;
             padding-left: 100px;
         }
